login html done

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -24,6 +24,22 @@
 </header>
 <main>
 
+	<div id="login_container">
+		<h2>Log In</h2>
+
+		<form id="login_form" action="#" method="post">
+				<label for="email" class="login_form_email"> E-mail </label>
+				<input type="text" id="email" name="email" autocomplete="email"/>
+
+				<label for="password" class="login_form_password"> Mot de passe </label>
+				<input type="password" id="password" name="password" required autocomplete="current-password">
+
+				<input class="btn-filter" type="submit" id="submit-button" value="Se connecter">
+
+				<p id="lost_password"> Mot de passe oublié</p>
+		</form>
+
+	</div>
 </main>
 
 <footer>
