changes login html & css for body & all login html

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -23,7 +23,6 @@
 	</nav>
 </header>
 <main>
-
 	<div id="login_container">
 		<h2>Log In</h2>
 
@@ -34,12 +33,10 @@
 				<label for="password" class="login_form_password"> Mot de passe </label>
 				<input type="password" id="password" name="password" required autocomplete="current-password">
 
-				<input class="btn-filter" type="submit" id="submit-button" value="Se connecter">
-
-				<p id="lost_password"> Mot de passe oublié</p>
+				<input class="connect-button" type="submit" id="submit-button" value="Se connecter">
 		</form>
-
-	</div>
+		<p id="lost_password"> Mot de passe oublié</p>
+		</div>
 </main>
 
 <footer>
