--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<a href="#portfolio"><li>projets</li></a>
 			<li>contact</li>
-			<li>login</li>
+			<a href="login.html"> <li>login</li> </a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
