--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 	<nav>
 		<ul>
 			<a href="#portfolio"><li>projets</li></a>
-			<li>contact</li>
+			<a href="#contact"><li>contact</li></a>
 			<a href="login.html"> <li>login</li> </a>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
