--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,42 +9,46 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="./assets/JS/login.js" defer></script>
 </head>
+
 <body>
-<header>
-	<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-	<nav>
-		<ul>
-			<a href="index.html#portfolio"><li>projets</li></a>
-			<a href="index.html#contact"><li>contact</li></a>
-			<a href="login.html"> <li>login</li> </a>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-		</ul>
-	</nav>
-</header>
-<main>
-	<div id="login_container">
-		<h2>Log In</h2>
+	<header>
+		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
+		<nav>
+			<ul>
+				<a href="index.html#portfolio"><li>projets</li></a>
+				<a href="index.html#contact"><li>contact</li></a>
+				<a href="login.html"> <li>login</li> </a>
+				<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
+			</ul>
+		</nav>
+	</header>
 
-		<form id="login_form" action="#" method="post">
-				<label for="email" class="login_form_email"> E-mail </label>
-				<input type="text" id="email" name="email" autocomplete="email"/>
+	<main>
+		<div id="login_container">
+			<h2>Log In</h2>
 
-				<label for="password" class="login_form_password"> Mot de passe </label>
-				<input type="password" id="password" name="password" required autocomplete="current-password">
+			<form id="login_form" action="#" method="post">
+					<label for="email" class="login_form_email"> E-mail </label>
+					<input type="text" id="email" name="email" autocomplete="email"/>
 
-				<input class="connect-button" type="submit" id="submit-button" value="Se connecter">
-		</form>
-		<p id="lost_password"> Mot de passe oublié</p>
-		</div>
-</main>
+					<label for="password" class="login_form_password"> Mot de passe </label>
+					<input type="password" id="password" name="password" required autocomplete="current-password">
 
-<footer>
-	<nav>
-		<ul>
-			<li>Mentions Légales</li>
-		</ul>
-	</nav>
-</footer>
+					<input class="connect-button" type="submit" id="submit-button" value="Se connecter">
+			</form>
+			<p id="lost_password"> Mot de passe oublié</p>
+			</div>
+	</main>
+
+	<footer>
+		<nav>
+			<ul>
+				<li>Mentions Légales</li>
+			</ul>
+		</nav>
+	</footer>
+
 </body>
 </html>
