--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,10 +39,8 @@
 		</section>
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
-			<div class="filters">
-			</div>
-			<div class="gallery" id="gallery">
-			</div>
+			<div class="filters"></div>
+			<div class="gallery" id="gallery"></div>
 		</section>
 		<section id="contact">
 			<h2>Contact</h2>
