trying login js, errors

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,7 +36,7 @@
 					<label for="password" class="login_form_password"> Mot de passe </label>
 					<input type="password" id="password" name="password" required autocomplete="current-password">
 
-					<input class="connect-button" type="submit" id="submit-button" value="Se connecter">
+					<input class="connect-button" type="submit" id="submit_button" value="Se connecter">
 			</form>
 			<p id="lost_password"> Mot de passe oublié</p>
 			</div>
