--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,11 +37,18 @@
 				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
 			</article>
 		</section>
+
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
-			<div class="filters"></div>
+			<div class="filters">
+				<div class="all_filter btn_filters" id=""><span>Tous</span></div>
+				<div class="object_filter btn_filters" id=""><span>Objets</span></div>
+				<div class="apartment_filter btn_filters" id=""><span>Appartements</span></div>
+				<div class="hotel_filter btn_filters" id=""><span>Hôtel & restaurants</span></div>
+			</div>
 			<div class="gallery" id="gallery"></div>
 		</section>
+
 		<section id="contact">
 			<h2>Contact</h2>
 			<p>Vous avez un projet ? Discutons-en !</p>
