--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,8 @@
 				<div class="all_filter btn_filters" id=""><span>Tous</span></div>
 				<div class="object_filter btn_filters" id=""><span>Objets</span></div>
 				<div class="apartment_filter btn_filters" id=""><span>Appartements</span></div>
-				<div class="hotel_filter btn_filters" id=""><span>Hôtel & restaurants</span></div>
+				<div class="hotel_filter btn_filters" id=""><span>Hôtel et restaurants</span></div>
+				<!-- Hôtel & restaurants -->
 			</div>
 			<div class="gallery" id="gallery"></div>
 		</section>
