--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="./assets/JS/index.js" defer></script>
+	<script src="./scripts/index.js" defer></script>
 </head>
 
 <body>
@@ -41,11 +41,11 @@
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
 			<div class="filters">
-				<div class="all_filter btn_filters" id=""><span>Tous</span></div>
+				<div class="all_filter btn_filters btn_active" id=""><span>Tous</span></div>
 				<div class="object_filter btn_filters" id=""><span>Objets</span></div>
 				<div class="apartment_filter btn_filters" id=""><span>Appartements</span></div>
-				<div class="hotel_filter btn_filters" id=""><span>Hôtel et restaurants</span></div>
-				<!-- Hôtel & restaurants -->
+				<div class="hotel_filter btn_filters" id=""><span>Hôtel & restaurants</span></div>
+				<!-- ?? "& : special characters must be escaped"-->
 			</div>
 			<div class="gallery" id="gallery"></div>
 		</section>
