put '&#38;' instead of '&' in index html for 'hotel & restaurants' bc of an unknown error - no more error at least

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,11 +41,11 @@
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
 			<div class="filters">
-				<div class="all_filter btn_filters btn_active" id=""><span>Tous</span></div>
-				<div class="object_filter btn_filters" id=""><span>Objets</span></div>
-				<div class="apartment_filter btn_filters" id=""><span>Appartements</span></div>
-				<div class="hotel_filter btn_filters" id=""><span>Hôtel & restaurants</span></div>
-				<!-- ?? "& : special characters must be escaped"-->
+				<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
+				<div class="object_filter btn_filters" id=""><span >Objets </span></div>
+				<div class="apartment_filter btn_filters" id=""><span> Appartements </span></div>
+				<div class="hotel_filter btn_filters" id=""><span> Hôtel &#38; restaurants </span></div>
+				<!-- ?? "& : special characters must be escaped" = "&#38;"-->
 			</div>
 			<div class="gallery" id="gallery"></div>
 		</section>
