change the login/logout : add an ID, so that it can be changed when token if found

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 			<ul>
 				<a href="#portfolio"><li>projets</li></a>
 				<a href="#contact"><li>contact</li></a>
-				<a href="login.html"> <li>login</li> </a>
+				<a href="login.html" id="loginLink"> <li>login</li> </a>
 				<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
 			</ul>
 		</nav>
