--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 			<ul>
 				<a href="#portfolio"><li>projets</li></a>
 				<a href="#contact"><li>contact</li></a>
-				<a href="login.html" id="loginLink"> <li>login</li> </a>
+				<a href="login.html"> <li id="loginLink">login</li> </a>
 				<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
 			</ul>
 		</nav>
@@ -29,6 +29,7 @@
 		<section id="introduction">
 			<figure>
 				<img src="./assets/images/sophie-bluel.png" alt="">
+				<p class="btn_modification" id="">modifier</p>
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
@@ -40,6 +41,7 @@
 
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
+			<p class="btn_portfolio" id="">modifier</p>
 			<div class="filters">
 				<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
 				<div class="object_filter btn_filters" id=""><span >Objets </span></div>
