first try at modal

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,6 +65,24 @@
 				<input type="submit" value="Envoyer">
 			</form>
 		</section>
+
+
+		<!-- ESSAI MODALE -->
+
+		<!-- Trigger/Open The Modal -->
+<button id="myBtnModal">Open Modal</button>
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
+
 	</main>
 
 	<footer>
