trying modal / modifying existing modal + updating comments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
 		<section id="introduction">
 			<figure>
 				<img src="./assets/images/sophie-bluel.png" alt="">
-				<p class="btn_modification" id="">modifier</p>
+
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
@@ -41,7 +41,22 @@
 
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
-			<p class="btn_portfolio" id="">modifier</p>
+			
+			<!-- ESSAI MODALE -->
+				<!-- Trigger/Open The Modal -->
+				<button class="btn_portfolio" id="btn_open_modal"> Modifier</button>
+
+				<!-- The Modal -->
+				<div id="myModal" class="modal">
+
+				<!-- Modal content -->
+				<div class="modal-content">
+					<span class="close">&times;</span>
+					<p>Some text in the Modal... PICTURES AND ALL</p>
+					</div>
+				</div>
+				<!-- FIN MODALE -->
+
 			<div class="filters">
 				<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
 				<div class="object_filter btn_filters" id=""><span >Objets </span></div>
@@ -65,24 +80,7 @@
 				<input type="submit" value="Envoyer">
 			</form>
 		</section>
-
-
-		<!-- ESSAI MODALE -->
-
-		<!-- Trigger/Open The Modal -->
-<button id="myBtnModal">Open Modal</button>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <p>Some text in the Modal..</p>
-  </div>
-
-</div>
-
+		
 	</main>
 
 	<footer>
