some modifications of the modal - not finished yet.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
 				<!-- Modal content -->
 				<div class="modal-content">
 					<span class="close">&times;</span>
-					<p>Some text in the Modal... PICTURES AND ALL</p>
+					<p>Galerie photo</p>
 					</div>
 				</div>
 				<!-- FIN MODALE -->
@@ -86,7 +86,7 @@
 	<footer>
 		<nav>
 			<ul>
-				<li>Mentions Légales</li>
+				<li class="legal_mentions">Mentions Légales</li>
 			</ul>
 		</nav>
 	</footer>
