--- a/frontend/login.html
+++ b/frontend/login.html
@@ -45,7 +45,7 @@
 	<footer>
 		<nav>
 			<ul>
-				<li>Mentions Légales</li>
+				<li class="legal_mentions">Mentions Légales</li>
 			</ul>
 		</nav>
 	</footer>
