creation of the black 'edit mode' banner for the homepage + start of css for it / has to be fixed, not sitting where it should be

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+	<div class="edition_mode">
+		<p> Mode édition</p>
+		<button id="publish_changes"> Publier les changements</button>
+	</div>
 	<header>
 		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 		<nav>
@@ -52,7 +56,7 @@
 				<!-- Modal content -->
 				<div class="modal-content">
 					<span class="close">&times;</span>
-					<p>Galerie photo</p>
+					<h3>Galerie photo</h3>
 					</div>
 				</div>
 				<!-- FIN MODALE -->
