--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,15 +7,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/061f1c17d4.js" crossorigin="anonymous"></script>
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<script src="./scripts/index.js" defer></script>
 </head>
 
 <body>
-	<div class="edition_mode">
-		<p> Mode édition</p>
-		<button id="publish_changes"> Publier les changements</button>
+	<div  class="edition_mode">
+		<p> <i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
 	</div>
 	<header>
 		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
