edit black banner at the top is in right position, width 100% while body still samed width : OK

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,9 +14,13 @@
 </head>
 
 <body>
+
 	<div  class="edition_mode">
 		<p> <i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
 	</div>
+
+	<div class="main-container">
+		
 	<header>
 		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
 		<nav>
@@ -94,6 +98,6 @@
 			</ul>
 		</nav>
 	</footer>
-
+</div>
 </body>
 </html>
