login page also has 'main_container' now, so it works fine'

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,42 +14,43 @@
 </head>
 
 <body>
-	<header>
-		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-		<nav>
-			<ul>
-				<a href="index.html#portfolio"><li>projets</li></a>
-				<a href="index.html#contact"><li>contact</li></a>
-				<a href="login.html" id="loginLink"> <li>login</li> </a>
-				<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
-			</ul>
-		</nav>
-	</header>
+	<div class="main_container">
+		<header>
+			<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
+			<nav>
+				<ul>
+					<a href="index.html#portfolio"><li>projets</li></a>
+					<a href="index.html#contact"><li>contact</li></a>
+					<a href="login.html" id="loginLink"> <li>login</li> </a>
+					<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
+				</ul>
+			</nav>
+		</header>
 
-	<main>
-		<div id="login_container">
-			<h2>Log In</h2>
+		<main>
+			<div id="login_container">
+				<h2>Log In</h2>
 
-			<form id="login_form" action="#" method="post">
-					<label for="email" class="login_form_email"> E-mail </label>
-					<input type="text" id="email" name="email" autocomplete="email"/>
+				<form id="login_form" action="#" method="post">
+						<label for="email" class="login_form_email"> E-mail </label>
+						<input type="text" id="email" name="email" autocomplete="email"/>
 
-					<label for="password" class="login_form_password"> Mot de passe </label>
-					<input type="password" id="password" name="password" required autocomplete="current-password">
+						<label for="password" class="login_form_password"> Mot de passe </label>
+						<input type="password" id="password" name="password" required autocomplete="current-password">
 
-					<input class="connect-button" type="submit" id="submit_button" value="Se connecter">
-			</form>
-			<p id="lost_password"> Mot de passe oublié</p>
-			</div>
-	</main>
+						<input class="connect-button" type="submit" id="submit_button" value="Se connecter">
+				</form>
+				<p id="lost_password"> Mot de passe oublié</p>
+				</div>
+		</main>
 
-	<footer>
-		<nav>
-			<ul>
-				<li class="legal_mentions">Mentions Légales</li>
-			</ul>
-		</nav>
-	</footer>
-
+		<footer>
+			<nav>
+				<ul>
+					<li class="legal_mentions">Mentions Légales</li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
 </body>
 </html>
