--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,85 +19,85 @@
 		<p> <i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
 	</div>
 
-	<div class="main-container">
-		
-	<header>
-		<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-		<nav>
-			<ul>
-				<a href="#portfolio"><li>projets</li></a>
-				<a href="#contact"><li>contact</li></a>
-				<a href="login.html"> <li id="loginLink">login</li> </a>
-				<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
-			</ul>
-		</nav>
-	</header>
+	<div class="main_container">
 
-	<main>
-		<section id="introduction">
-			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="">
+		<header>
+			<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
+			<nav>
+				<ul>
+					<a href="#portfolio"><li>projets</li></a>
+					<a href="#contact"><li>contact</li></a>
+					<a href="login.html"> <li id="loginLink">login</li> </a>
+					<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
+				</ul>
+			</nav>
+		</header>
 
-			</figure>
-			<article>
-				<h2>Designer d'espace</h2>
-				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
-				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
-			</article>
-		</section>
+		<main>
+			<section id="introduction">
+				<figure>
+					<img src="./assets/images/sophie-bluel.png" alt="">
 
-		<section id="portfolio">
-			<h2>Mes Projets</h2>
-			
-			<!-- ESSAI MODALE -->
-				<!-- Trigger/Open The Modal -->
-				<button class="btn_portfolio" id="btn_open_modal"> Modifier</button>
+				</figure>
+				<article>
+					<h2>Designer d'espace</h2>
+					<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
+					<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice).</p>
+				</article>
+			</section>
 
-				<!-- The Modal -->
-				<div id="myModal" class="modal">
+			<section id="portfolio">
+				<h2>Mes Projets</h2>
+				
+				<!-- ESSAI MODALE -->
+					<!-- Trigger/Open The Modal -->
+					<button class="btn_portfolio" id="btn_open_modal"> Modifier</button>
 
-				<!-- Modal content -->
-				<div class="modal-content">
-					<span class="close">&times;</span>
-					<h3>Galerie photo</h3>
+					<!-- The Modal -->
+					<div id="myModal" class="modal">
+
+					<!-- Modal content -->
+					<div class="modal-content">
+						<span class="close">&times;</span>
+						<h3>Galerie photo</h3>
+						</div>
 					</div>
+					<!-- FIN MODALE -->
+
+				<div class="filters">
+					<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
+					<div class="object_filter btn_filters" id=""><span >Objets </span></div>
+					<div class="apartment_filter btn_filters" id=""><span> Appartements </span></div>
+					<div class="hotel_filter btn_filters" id=""><span> Hôtel &#38; restaurants </span></div>
+					<!-- ?? "& : special characters must be escaped" = "&#38;"-->
 				</div>
-				<!-- FIN MODALE -->
+				<div class="gallery" id="gallery"></div>
+			</section>
 
-			<div class="filters">
-				<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
-				<div class="object_filter btn_filters" id=""><span >Objets </span></div>
-				<div class="apartment_filter btn_filters" id=""><span> Appartements </span></div>
-				<div class="hotel_filter btn_filters" id=""><span> Hôtel &#38; restaurants </span></div>
-				<!-- ?? "& : special characters must be escaped" = "&#38;"-->
-			</div>
-			<div class="gallery" id="gallery"></div>
-		</section>
+			<section id="contact">
+				<h2>Contact</h2>
+				<p>Vous avez un projet ? Discutons-en !</p>
+				<form action="#" method="post">
+					<label for="name">Nom</label>
+					<input type="text" name="name" id="name">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer">
+				</form>
+			</section>
+			
+		</main>
 
-		<section id="contact">
-			<h2>Contact</h2>
-			<p>Vous avez un projet ? Discutons-en !</p>
-			<form action="#" method="post">
-				<label for="name">Nom</label>
-				<input type="text" name="name" id="name">
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email">
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer">
-			</form>
-		</section>
-		
-	</main>
-
-	<footer>
-		<nav>
-			<ul>
-				<li class="legal_mentions">Mentions Légales</li>
-			</ul>
-		</nav>
-	</footer>
-</div>
+		<footer>
+			<nav>
+				<ul>
+					<li class="legal_mentions">Mentions Légales</li>
+				</ul>
+			</nav>
+		</footer>
+	</div>
 </body>
 </html>
