modification of the 'modifiation' modal button + modifications for the black line banner of 'edition mode' at the top of homepage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,8 @@
 <body>
 
 	<div  class="edition_mode">
-		<p> <i class="fa-regular fa-pen-to-square"></i> Mode édition</p>
+		<i class="fa-regular fa-pen-to-square"></i> 
+		<p>Mode édition</p>
 	</div>
 
 	<div class="main_container">
@@ -48,22 +49,26 @@
 			</section>
 
 			<section id="portfolio">
-				<h2>Mes Projets</h2>
-				
-				<!-- ESSAI MODALE -->
-					<!-- Trigger/Open The Modal -->
-					<button class="btn_portfolio" id="btn_open_modal"> Modifier</button>
+				<div class="title_modal">
+					<h2>Mes Projets</h2>
+					
+					<!-- ESSAI MODALE -->
+						<!-- Trigger/Open The Modal -->
+						<button class="btn_portfolio" id="btn_open_modal">
+							<i class="fa-regular fa-pen-to-square"></i> modifier
+						</button>
 
-					<!-- The Modal -->
-					<div id="myModal" class="modal">
+						<!-- The Modal -->
+						<div id="myModal" class="modal">
 
-					<!-- Modal content -->
-					<div class="modal-content">
-						<span class="close">&times;</span>
-						<h3>Galerie photo</h3>
+						<!-- Modal content -->
+						<div class="modal-content">
+							<span class="close">&times;</span>
+							<h3>Galerie photo</h3>
+							</div>
 						</div>
-					</div>
-					<!-- FIN MODALE -->
+						<!-- FIN MODALE -->
+				</div>
 
 				<div class="filters">
 					<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
@@ -101,3 +106,9 @@
 	</div>
 </body>
 </html>
+
+<!-- TO DO 
+
+- bien placer le "modifier" pour la modale 
+
+-->
