multiples changes - probably just went back to hwo it was - too much errors. code now OK

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,24 +51,18 @@
 			<section id="portfolio">
 				<div class="title_modal">
 					<h2>Mes Projets</h2>
-					
-					<!-- ESSAI MODALE -->
-						<!-- Trigger/Open The Modal -->
+						<!-- MODALE -->
 						<button class="btn_portfolio" id="btn_open_modal">
 							<i class="fa-regular fa-pen-to-square"></i> modifier
 						</button>
-
-						<!-- The Modal -->
 						<div id="myModal" class="modal">
-
-						<!-- Modal content -->
 							<span class="close">&times;</span>
 							<h3>Galerie photo</h3>
-							</div>
+						</div>
 						<!-- FIN MODALE -->
 				</div>
 
-				<div class="filters">
+				<div class="filters_div">
 					<!--
 					<div class="all_filter btn_filters btn_active" id=""><span> Tous </span></div>
 					<div class="object_filter btn_filters" id=""><span >Objets </span></div>
