--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<meta charset="UTF-8">
-	<title>Sophie Bluel - Architecte d'intérieur</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-	<script src="https://kit.fontawesome.com/061f1c17d4.js" crossorigin="anonymous"></script>
-	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/style.css">
-	<script src="./scripts/login.js" defer></script>
+    <meta charset="UTF-8">
+    <title>Sophie Bluel - Architecte d'intérieur</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/061f1c17d4.js" crossorigin="anonymous"></script>
+    <meta name="description" content="">
+    <link rel="stylesheet" href="./assets/style.css">
+    <script src="./scripts/login.js" defer></script>
 </head>
-
 <body>
-	<div class="main_container">
-		<header>
-			<a href="index.html"><h1>Sophie Bluel <span>Architecte d'intérieur</span></h1></a>
-			<nav>
-				<ul>
-					<a href="index.html#portfolio"><li>projets</li></a>
-					<a href="index.html#contact"><li>contact</li></a>
-					<a href="login.html" id="loginLink"> <li>login</li> </a>
-					<a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
-				</ul>
-			</nav>
-		</header>
-
-		<main>
-			<div id="login_container">
-				<h2>Log In</h2>
-
-				<form id="login_form" action="#" method="post">
-						<label for="email" class="login_form_email"> E-mail </label>
-						<input type="text" id="email" name="email" autocomplete="email"/>
-
-						<label for="password" class="login_form_password"> Mot de passe </label>
-						<input type="password" id="password" name="password" required autocomplete="current-password">
-
-						<input class="connect-button" type="submit" id="submit_button" value="Se connecter">
-				</form>
-				<p id="lost_password"> Mot de passe oublié</p>
-				</div>
-		</main>
-	</div>
-		<footer>
-			<nav>
-				<ul>
-					<li class="legal_mentions">Mentions Légales</li>
-				</ul>
-			</nav>
-		</footer>
+    <div class="main_container">
+        <header>
+            <a href="index.html">
+                <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+            </a>
+            <nav>
+                <ul>
+                    <a href="index.html#portfolio"><li>projets</li></a>
+                    <a href="index.html#contact"><li>contact</li></a>
+                    <a href="login.html" id="loginLink"><li>login</li></a>
+                    <a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div id="login_container">
+                <h2>Log In</h2>
+                <form id="login_form" action="#" method="post">
+                    <label for="email" class="login_form_email">E-mail</label>
+                    <input type="text" id="email" name="email" autocomplete="email"/>
+                    <label for="password" class="login_form_password">Mot de passe</label>
+                    <input type="password" id="password" name="password" required autocomplete="current-password">
+                    <input class="connect-button" type="submit" id="submit_button" value="Se connecter">
+                </form>
+                <p id="lost_password">Mot de passe oublié</p>
+            </div>
+        </main>
+    </div>
+    <footer>
+        <nav>
+            <ul>
+                <li class="legal_mentions">Mentions Légales</li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
