--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,9 @@
   <script src="https://kit.fontawesome.com/061f1c17d4.js" crossorigin="anonymous"></script>
   <meta name="description" content="">
   <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./assets/modal.css">
   <script src="./scripts/index.js" defer></script>
+  <script src="./scripts/modal.js" defer></script>
 </head>
 <body>
   <div class="edition_mode">
