function logout fully working for both index & login html pages - also refresh page on index so that we see the page as someone who's logged out

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="#portfolio">projets</a></li>
           <li><a href="#contact">contact</a></li>
-          <a href="login.html" id="loginLink"><li>login</li></a>
+          <li id="loginLink">login</li>
           <li><a href="https://www.instagram.com"><img src="./assets/icons/instagram.png" alt="Instagram"></a></li>
         </ul>
       </nav>
