--- a/frontend/login.html
+++ b/frontend/login.html
@@ -22,7 +22,7 @@
                 <ul>
                     <a href="index.html#portfolio"><li>projets</li></a>
                     <a href="index.html#contact"><li>contact</li></a>
-                    <a href="login.html" id="loginLink"><li>login</li></a>
+                    <li id="loginLink">login</li>
                     <a href="https://www.instagram.com"><li><img src="./assets/icons/instagram.png" alt="Instagram"></li></a>
                 </ul>
             </nav>
